--- a/index.html
+++ b/index.html
@@ -40,14 +40,11 @@
     <section class="slide" id="diagnoses">
         <div class="content">
             <h1>Diagnoses</h1>
-            <p>Each dot represents a patient that underwent some type of surgery.</p>
-            <p id="gender-insight" class="fade-in-text">Men are more common to
-            go under surgery past their 60s.
-                
-            Women are more common to go under surgery 
-            between the ages of 30-60
+            <p>Each dot represents 5 patients that underwent some type of surgery.</p>
+            <p id="blue_dots" class="fade-in-text">Blue dots represent Gastrointestinal (GI) Cancers such as colon cancer, gastric cancer, pancreatic cancer, etc.. 
             </p>
-            
+            <p id="red_dots" class="fade-in-text">Blue dots represent Gastrointestinal (GI) Cancers such as colon cancer, gastric cancer, pancreatic cancer, etc.. 
+            </p>
             <!-- <div id="scroll" class="scroll-indicator-admission" onclick="scrollToSlide('admission')">↓ Scroll to continue</div> -->
         </div>
         <div class="visual" id="diagnoses-vis"></div>
