--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section class="slide" id="duration-of-stay">
         <div class="content">
             <h1>Duration of Stay</h1>
-            <p>The length of hospital stay varies depending on the length of surgery performed. Surgeries that took longer typically meant longer hospital stays, and surgeries that look less time typicall meant shorter hospital stays. </p>
+            <p>The length of hospital stay varies depending on the length of surgery performed. Surgeries that took longer typically meant longer hospital stays, and surgeries that look less time typically meant shorter hospital stays. </p>
             <div id="scroll-duration" class="scroll-indicator hidden" onclick="scrollToSlide('takeaway')">↓ Click to continue</div>
         </div>
 
